--- a/config/database.yml
+++ b/config/database.yml
@@ -20,16 +20,17 @@ default: &default
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  template: template0
 
 development:
   <<: *default
-  database: vernewlace_development
+  database: idea_board_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: vernewlace
+  #username: idea_board
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: vernewlace_test
+  database: idea_board_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: vernewlace_production
-  username: vernewlace
-  password: <%= ENV['VERNEWLACE_DATABASE_PASSWORD'] %>
+  database: idea_board_production
+  username: idea_board
+  password: <%= ENV['IDEA_BOARD_DATABASE_PASSWORD'] %>
